aks/argocd/cloudshell/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudshell
spec:
  selector:
    matchLabels:
      app: cloudshell
  template:
    metadata:
      labels:
        app: cloudshell
    spec:
      containers:
        - name: cloudshell
          image: jkroepke/cloudshell:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8376
              name: http
          volumeMounts:
            - mountPath: tmp
              name: tmp
      serviceAccountName: cloudshell
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cloudshell
spec:
  type: ClusterIP
  selector:
    app: cloudshell
  ports:
    - port: 8376
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshell
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: cloudshell.aks.jkroepke.de
      http:
        paths:
          - backend:
              service:
                name: cloudshell
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cloudshell.aks.jkroepke.de
      secretName: cloudshell-ingress-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
spec:
  podSelector:
    matchLabels:
      app: cloudshell
  policyTypes:
    - Egress
